website: fix text alignment in monitors names

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,6 +12,12 @@ body {
   min-width: 940px;
 }
 
+span {
+  display: inline-block;
+  vertical-align: middle;
+  line-height: normal;
+}
+
 .sidebar {
   position: fixed;
   left: 0;
@@ -339,8 +345,13 @@ body {
   margin: max(20px, 2.5%);
   transition: transform .2s;
   display: flex;
+  text-align: center;
   align-items: center;
   justify-content: center;
+  height: 100px;
+  line-height: 100px;
+  text-align: center;
+  border: 2px dashed #f69c55;
 }
 
 .result_air_text {
